--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,3 +5,27 @@
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+html, body{
+
+    width: 100vw;
+    height: 100vh;
+    background-color: black; 
+}
+
+main{
+    height: 100vh;
+    position: relative;
+    background-color: green;
+}
+
+section#telefone{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 627px;
+    width: 311px;
+    transform: translate(-50%, -50%); 
+    background-color: blue;
+    background: url(../imagens/frame-iphone.png) no-repeat;
+}
