--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,10 +13,16 @@ html, body{
     background-color: black; 
 }
 
+body{
+
+    background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 main{
     height: 100vh;
     position: relative;
-    background-color: green;
 }
 
 section#telefone{
