--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,3 +43,16 @@ iframe#tela{
     width: 269px;
     height: 471px;
 }
+
+section#sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.718) ;
+    box-sizing: border-box;
+
+}
+
+section#sociais img:hover{
+    border: 2px solid white;
+}
